<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_grades_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="neto.com.mygrades.activity.GradesEditActivity">

    <TextView
        android:id="@+id/txt_disciplina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disciplina"
        style="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/edt_disciplina"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt_disciplina"
        android:inputType="textCapWords"
        android:layout_toEndOf="@+id/txt_disciplina"/>

    <TextView
        android:id="@+id/txt_p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p1"
        style="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/txt_disciplina"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edt_p1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt_p1"
        android:inputType="numberDecimal"
        android:layout_toEndOf="@+id/txt_disciplina" />

    <TextView
        android:id="@+id/txt_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p2"
        style="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/txt_p1"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edt_p2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt_p2"
        android:inputType="numberDecimal"
        android:layout_toEndOf="@+id/txt_disciplina" />

    <TextView
        android:id="@+id/txt_edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edad"
        style="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/txt_p2"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edt_edad"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt_edad"
        android:inputType="numberDecimal"
        android:layout_toEndOf="@+id/txt_disciplina" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/txt_edad">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="process"
            android:text="@string/ok"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@string/cancelar"/>

    </LinearLayout>

</RelativeLayout>
